--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,14 @@
     <main>
         <div class="container">
             {% block main %}{% endblock %}
+            {% with messages = get_flashed_messages()
+              %} {% if messages %}
+              <ul class="flashes alert alert-success" role="alert">
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+              </ul>
+              {% endif %} {% endwith %}
         </div>
     </main>
     <footer>
